/*
** EPITECH PROJECT, 2023
** Raytracer
** File description:
** LightFactory
*/

#ifndef LIGHTFACTORY_HPP_
#define LIGHTFACTORY_HPP_

class LightFactory {
    public:
        LightFactory();
        ~LightFactory();

    protected:
    private:
};

#endif /* !LIGHTFACTORY_HPP_ */
