/*
** EPITECH PROJECT, 2023
** Raytracer
** File description:
** MaterialFactory
*/

#ifndef MATERIALFACTORY_HPP_
#define MATERIALFACTORY_HPP_

class MaterialFactory {
    public:
        MaterialFactory();
        ~MaterialFactory();

    protected:
    private:
};

#endif /* !MATERIALFACTORY_HPP_ */
