/*
** EPITECH PROJECT, 2023
** Raytracer
** File description:
** ShapeFactory
*/

#ifndef SHAPEFACTORY_HPP_
    #define SHAPEFACTORY_HPP_

    namespace raytracer {
        class ShapeFactory {
            public:
                ShapeFactory();
                ~ShapeFactory();

                

            protected:
            private:
        };
    }

#endif /* !SHAPEFACTORY_HPP_ */
