@startuml bogos
'https://plantuml.com/class-diagram

namespace raytracer {
    class Ray
    class ShapeFactory
    class IShape
    class Triangle
    class Sphere

    ShapeFactory <--> IShape
    IShape --> Triangle
    IShape --> Sphere

    class ILight
    class LightFactory
    class AmbiantLight
    class DirectionalLight

    LightFactory <--> ILight
    ILight --> AmbiantLight
    ILight --> DirectionalLight

    class IMaterial
    class MaterialFactory
    class Wood
    class Metal

    MaterialFactory <--> IMaterial
    IMaterial --> Wood
    IMaterial --> Metal

    class Camera
    class Scene {
        +render()
        --
        std::vector<Object> objects
        std::vector<ILight> lights
        Camera camera
    }

    class Object

    Object --> IShape
    Object --> IMaterial

    Scene --> Object
    Scene --> Camera
    Scene --> LightFactory
}

namespace maths {
    class Vector3D {
        + double dot(Vector3D)
        + double length(void)
        + double X
        + double Y
        + double Z
    }
    class Point3D {
        double X
        double Y
        double Z
    }
}

namespace parser {
    class PluginParser
    class ObjectParser
}

@endl